# demo-project

./: Dockerfile  Jenkinsfile  Jenkinsfile.txt  Jenkinsfile2
app/: index.html  server.js
kube/: app.yaml  apply.sh  deploy-csi.sh  kind.sh  kind.yaml  my-sc.yaml
kube/build-image/: Dockerfile  apply_deployment_from_yaml  build_and_push.sh  rollout_deployment_status
kube/jenkins/: 2.yaml  get-pwd.sh  jenkins-pvc.yaml  jenkins.sh  jenkins.values  jenkins.yaml
kube/jenkins/python/: Dockerfile  test.py  test.txt  test.yaml
kube/jenkins/python/test/: 1.yaml  Dockerfile  apply_deployment_from_yaml  deploy_from_yaml  deploy_from_yaml.py  out.txt  wait_for_deployment_complete
kube/jenkins/python/test/dock/: pyproject.toml
kube/mongodb/: apply.sh  mongo.yaml
