[tool.poetry]
name = "simple-deployer"
version = "0.1.0"
description = "Simple deployment tool for Jenkins on Kubernetes"
authors = ["Alexey Savchuk <sav.alex1917@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^24.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
